--- a/styles/globals.css
+++ b/styles/globals.css
@@ -166,7 +166,6 @@ a:hover {
 .cm-flex-width-group {
   width: 100%;
   flex: 1 0 100%;
-  /*padding: 0 10px;*/
 }
 
 .cm-flex-wrap {
@@ -178,7 +177,6 @@ a:hover {
   padding: 0.1em 1rem;
 }
 
-/** --NAVBAR-- */
 .cm-navbar {
   --bs-navbar-padding-x: 0;
   --bs-navbar-padding-y: 0.5rem;
@@ -214,7 +212,6 @@ a:hover {
   justify-content: space-between;
 }
 
-/** --Logo Navbar-- */
 .cm-navbar-brand {
   padding-top: 0.3125rem;
   padding-bottom: 0.3125rem;
@@ -239,7 +236,7 @@ a:hover {
   background-color: var(--cm-color-gray);
   border-radius: 50%;
 }
-/*Orange Bar*/
+
 .cm-orange-bg {
   height: 0.2rem;
   background-color: var(--cm-color-orange);
@@ -263,362 +260,235 @@ header.cm-masthead .cm-masthead-subheading {
   margin-bottom: 2rem;
 }
 
-.portfolio-item{
-  margin-bottom: 30px;
+header.cm-header {
+  height: 500px;
+  padding-top: 8rem;
+  padding-bottom: 8rem;
+  text-align: center;
+  color: #fff;
+  background-image: url("./../public/pexels-engin-akyurt-1435895.jpg");
+  background-repeat: no-repeat;
+  background-attachment: scroll;
+  background-position: center center;
+  background-size: cover;
 }
 
-.errMsg {
-  background-color: lightpink;
-  color: firebrick;
+.cm-header-lessons-container {
+  font-size: 3.25rem;
+  font-weight: 100;
+  line-height: 3.25rem;
+  margin-bottom: 2rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+}
+
+.cm-cooking-workshop-section {
+  background-color: #fff;
+  padding: 50px 0;
+}
+
+.cm-title-section {
+  font-size: 5em;
   font-weight: bold;
-  padding: 0.5rem;
-  margin-bottom: 0.5rem;
+  margin-bottom: 20px;
+  color: #FF7D00;
 }
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+.cm-activity-grid {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: repeat(3, 1fr);
+  gap: 13px;
+}
+
+.cm-activity-item {
+  width: 266px;
+  height: 550px;
+  margin: 13px;
+  border-radius: 10px;
+  border: 1px solid #FF7D00;
+  background-color: #fff;
+  overflow: hidden;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+}
+
+.cm-activity-image {
+  width: 100%;
+  height: 40%;
+  object-fit: cover;
+}
+
+.cm-activity-details {
+  padding: 10px;
+}
+
+.cm-activity-title {
+  font-size: 18px;
+  font-weight: bold;
+  margin-bottom: 5px;
+}
+
+.cm-activity-description {
+  font-size: 14px;
+  color: #888888;
+}
+
+.cm-cooking-lesson-section {
+  padding: 40px 0;
+  background-color: gray;
+}
+
+.cm-testimonials-section {
+  padding: 40px 0;
+  background-color: #C4C4C4;
+}
+
+.cm-title-section {
+  text-align: center;
+  font-size: 24px;
+  color: #333;
+  margin-bottom: 20px;
+}
+
+.cm-testimonials-grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  gap: 20px;
+  justify-items: center;
+}
+
+.cm-testimonial {
+  background-color: #fff;
+  padding: 20px;
+  border-radius: 4px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  text-align: center;
+}
+
+.cm-testimonial-photo {
+  width: 80px;
+  height: 80px;
+  border-radius: 50%;
+  object-fit: cover;
+  margin-bottom: 10px;
+}
+
+.cm-testimonial-name {
+  font-size: 18px;
+  font-weight: bold;
+  color: #333;
+  margin-bottom: 5px;
+}
+
+.cm-testimonial-message {
+  font-size: 16px;
+  color: #666;
+  margin-bottom: 10px;
+}
+
+.cm-testimonial-city {
+  font-size: 14px;
+  color: #999;
+}
+
+footer.py-5 {
+  color: white;
+  background-color: #FF7D00;
+}
+footer.py-5 .cm-footer-logo {
+  height: 96px;
+}
+footer.py-5 .cm-footer-text {
+  font-size: 1.2rem;
+}
+footer.py-5 .cm-footer-link {
+  color: white;
+  text-decoration: none;
+}
+footer.py-5 .cm-footer-link:hover {
+  color: var(--cm-color-gray);
+}
+
+@media (min-width: 768px) and (max-width: 991px) {
+  .cm-activity-grid {
+    grid-template-columns: repeat(2, 1fr);
+  }
+  .cm-activity-item {
+    width: auto;
+    height: auto;
+  }
+}
+@media (max-width: 767px) {
+  .cm-activity-grid {
+    grid-template-columns: 1fr;
+  }
+  .cm-activity-item {
+    width: auto;
+    height: auto;
+  }
+}
+.cm-site-grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(371px, 1fr));
+  gap: 20px;
+}
+
+.cm-site-item {
+  width: 371px;
+  height: 500px;
+  background-color: #fff;
+  border-radius: 8px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  overflow: hidden;
+}
+
+.cm-site-image {
+  position: relative;
+  width: 100%;
+  height: 277px;
+}
+
+.cm-site-image-overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  border-radius: 8px 8px 0 0;
+}
+
+.cm-site-details {
+  padding: 20px;
+}
+.cm-site-details button {
+  margin-top: 10px;
+}
+
+.cm-site-title {
+  font-size: 20px;
+  font-weight: bold;
+  color: #ff7d00;
+  margin-bottom: 10px;
+}
+
+.cm-site-description {
+  font-size: 14px;
+  color: #888888;
+}
+.cm-site-description p {
+  margin-bottom: 5px;
+}
+.cm-site-description p:first-child {
+  margin-top: 10px;
+}
+.cm-site-description p:last-child {
+  margin-bottom: 0;
+}
+.cm-site-description p span {
+  color: #ff7d00;
+}
 
 /*# sourceMappingURL=globals.css.map */
